--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# ATLAS_URI=mongodb+srv://rdpajarillaga596:hardware@cluster2.bth4ozh.mongodb.net/Hardware
-ATLAS_URI=mongodb://127.0.0.1:27017/hardware
+ATLAS_URI=mongodb+srv://rdpajarillaga596:hardware@cluster2.bth4ozh.mongodb.net/Hardware
+# ATLAS_URI=mongodb://127.0.0.1:27017/hardware
 # ATLAS_URI=mongodb+srv://ocems2022:123456OcemS@cluster0.w8f0mom.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET=601b422c2548c7598feff132a8e6eee9
