--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 ATLAS_URI=mongodb+srv://rdpajarillaga596:hardware@cluster2.bth4ozh.mongodb.net/Hardware
+# 09488742889
+
 # ATLAS_URI=mongodb://127.0.0.1:27017/hardware
 # ATLAS_URI=mongodb+srv://ocems2022:123456OcemS@cluster0.w8f0mom.mongodb.net/?retryWrites=true&w=majority
 
@@ -10,3 +12,6 @@ EMAIL_USER=thomaspanget@gmail.com
 EMAIL_PASS=lfygnxzkrrzmzvga
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
+
+# Pass2024
+
