--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 ATLAS_URI=mongodb+srv://rdpajarillaga596:hardware@cluster2.bth4ozh.mongodb.net/Hardware
-# 09488742889
 
-# ATLAS_URI=mongodb://127.0.0.1:27017/hardware
-# ATLAS_URI=mongodb+srv://ocems2022:123456OcemS@cluster0.w8f0mom.mongodb.net/?retryWrites=true&w=majority
+
+# ATLAS_URI=mongodb://127.0.0.1:27017#09488742889/hardware
+# ATLAS_URI=mongodb+srv://ocems2022:123456OcemS@cluster0.w8f0mom.mongodb.net/?retryWrites=true&w=majority#Pass2024
 
 JWT_SECRET=601b422c2548c7598feff132a8e6eee9
 JWT_HEADER=QTracy
@@ -13,5 +13,5 @@ EMAIL_PASS=lfygnxzkrrzmzvga
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
 
-# Pass2024
+
 
