--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "google-map-react": "^1.1.0",
     "mdbreact": "./mdbreact-4.25.0.tgz",
     "react": "^16.12.0",
+    "react-autosuggest": "^10.1.0",
     "react-big-calendar": "^0.20.2",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.13.2",
