--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.7",
     "react-router": "^5.1.2",
     "react-scripts": "^3.0.1",
+    "react-to-print": "^2.15.1",
     "react-toast-notifications": "^2.5.1",
     "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.10",
