--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ JWT_SECRET=601b422c2548c7598feff132a8e6eee9
 JWT_HEADER=QTracy
 
 APP_NAME=Initial App
-EMAIL_USER=thomaspanget@gmail.com
-EMAIL_PASS=lfygnxzkrrzmzvga
+EMAIL_USER=rdpajarillaga596@gmail.com
+EMAIL_PASS=vscz hlye hqqn faop
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
 
