--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ATLAS_URI=mongodb+srv://rdpajarillaga596:hardware@cluster2.bth4ozh.mongodb.net/H
 JWT_SECRET=601b422c2548c7598feff132a8e6eee9
 JWT_HEADER=QTracy
 
-APP_NAME=Initial App
+APP_NAME=Liberty Hardware
 EMAIL_USER=rdpajarillaga596@gmail.com
 EMAIL_PASS=vscz hlye hqqn faop
 EMAIL_PORT=587
