--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ JWT_SECRET=601b422c2548c7598feff132a8e6eee9
 JWT_HEADER=QTracy
 
 APP_NAME=Liberty Hardware
-EMAIL_USER=rdpajarillaga596@gmail.com
-EMAIL_PASS=vscz hlye hqqn faop
+EMAIL_USER=libertyhardware1@gmail.com
+EMAIL_PASS=axbk qujy zkmd vdph
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
 
