--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "http": "^0.0.1-security",
+    "initial-server": "file:",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "nodemailer": "^6.7.7",
