--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "google-map-react": "^1.1.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mdbreact": "./mdbreact-4.25.0.tgz",
     "mdbreact-admin-pro": "file:",
     "react": "^16.12.0",
